--- a/nav.css
+++ b/nav.css
@@ -1,11 +1,11 @@
 /*
 Color Palette
-background color: #FF577F
-primary: #FF884B
-secondary: #FFD384
-tertiary: #FFF9B0
-accent: #9CFF2E
-vegasGold: #FDFF00
+background color: #DC3535
+primary: #B01E68
+secondary: #F49D1A
+tertiary: #FFE15D
+accent: #D989B5
+vegasGold: #38E54D
 white: #fff
 black: #000  
 */
@@ -23,7 +23,7 @@ black: #000
 .logo {
     font-size: 2.2rem;
     margin: 0.75rem 2.5rem;
-    color: #FDFF00;
+    color: #38E54D;
     font-family: 'Dancing Script', cursive;
 } 
 
@@ -47,7 +47,7 @@ black: #000
 }
 
 .navbar-links li:hover {
-    background-color: #FF577F;
+    background-color: #F49D1A;
 }
 
 .toggle-button {
@@ -67,6 +67,27 @@ black: #000
     background-color: #fff;
     border-radius: 10px;
 }
+
+.bottomNav{
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.bottomNav li {
+    list-style: none;
+    font-size: 0.9rem;
+    padding: 0 0.5rem;
+}
+.bottomNav li a {
+    text-decoration: none;
+    color: #38E54D;
+    display: block;
+}
+
+
 
 
 @media (max-width: 800px) {
