--- a/style.css
+++ b/style.css
@@ -1,11 +1,11 @@
 /*
 Color Palette
-background color: #200439
-primary: #512C73
-secondary: #361356
-tertiary: #6F4D8F
-accent: #9277AC
-vegasGold: #c5b358
+background color: #DC3535
+primary: #B01E68
+secondary: #F49D1A
+tertiary: #FFE15D
+accent: #D989B5
+vegasGold: #38E54D
 white: #fff
 black: #000  
 */
@@ -20,7 +20,7 @@ body {
     padding: 0;
     font-family: 'Open Sans', sans-serif;
     font-weight: 300;
-    background-color: #200439;
+    background-color: #DC3535;
     color: #fff;
 }
 
@@ -37,7 +37,7 @@ body {
 
 .heroImage img {
     border-radius: 6rem;
-    box-shadow: 10px 10px #000;
+    box-shadow: 10px 10px #fff;
     width: 100%;
     height: auto;
 }
@@ -50,7 +50,7 @@ body {
 }
 
 .heroName {
-    color: #c5b358;
+    color: #38E54D;
     font-size: 2.5rem;
     text-transform: uppercase;
 }
@@ -70,18 +70,18 @@ body {
 .button {
     background-color: #fff;
     padding: 1rem;
-    border: 1px solid #9277AC;
+    border: 1px solid #D989B5;
     border-radius: 25px;
     font-size: 0.9rem;
     font-weight: 700;
-    color: #200439;
+    color: #DC3535;
     text-decoration: none;
     box-shadow: 8px 8px 4px #000;
 }
 
 .button:hover {
-    background-color: #361356;
-    color: #c5b358;
+    background-color: #DC3535;
+    color: #38E54D;
     transform: scale(1.5);
     /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewpoint) */
 }
@@ -95,11 +95,11 @@ body {
 
 .projectCard {
     background-color: #fff;
-    color: #200439;
+    color: #DC3535;
     margin: 4rem 3rem;
     padding: 0.5rem 2rem;
     text-align: center;
-    border: 1px solid #9277AC;
+    border: 1px solid #D989B5;
     border-radius: 1rem;
     box-shadow: 10px 10px 5px #000;
 }
@@ -143,14 +143,37 @@ body {
     padding: 1.5rem;
 }
 
+footer {
+    text-align: center;
+    color: #38E54D;
+    margin: 10rem 0;
+    border-top: 1px solid #D989B5;
+}
+
+.copyright {
+    margin: 1rem;
+    padding: 1rem;
+    font-size: 1rem;
+    color: #38E54D;
+    display: block;
+}
+
+.filler {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    height: 80vh;
+}
 
 
-@media (min-width: 800px) {
+@media(min-width: 800px){
     .hero {
-        flex-direction: row;
-        justify-content: space-evenly;
+        flex-direction:  row;
+        justify-content: center;
         align-items: center;
-        height: 90vh;
+        height: 80vh;
     }
     
     .heroText {
