--- a/style.css
+++ b/style.css
@@ -24,6 +24,12 @@ body {
     color: #fff;
 }
 
+.aboutMe {
+    margin: 3rem;
+    padding: 4rem;
+}
+
+
 .hero {
     display: flex;
     flex-direction: column;
@@ -165,6 +171,11 @@ footer {
     align-items: center;
     margin: 0;
     height: 80vh;
+}
+
+.myPic img {
+    width: 100%;
+    height: auto;
 }
 
 
