--- a/nav.css
+++ b/nav.css
@@ -47,7 +47,7 @@ black: #000
 }
 
 .navbar-links li:hover {
-    background-color: #F49D1A;
+    background-color: #38E54D;
 }
 
 .toggle-button {
@@ -83,7 +83,7 @@ black: #000
 }
 .bottomNav li a {
     text-decoration: none;
-    color: #38E54D;
+    color: #fff;
     display: block;
 }
 
