--- a/style.css
+++ b/style.css
@@ -151,16 +151,16 @@ body {
 
 footer {
     text-align: center;
-    color: #38E54D;
+    color: #fff;
     margin: 10rem 0;
-    border-top: 1px solid #D989B5;
+    border-top: 1px solid #38E54D;
 }
 
 .copyright {
     margin: 1rem;
     padding: 1rem;
     font-size: 1rem;
-    color: #38E54D;
+    color: #fff;
     display: block;
 }
 
@@ -173,11 +173,11 @@ footer {
     height: 80vh;
 }
 
+
 .myPic img {
     width: 100%;
-    height: auto;
+    height:auto;
 }
-
 
 @media(min-width: 800px){
     .hero {
